{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 3478,
  "lineage": "712fb8bf-a12f-c62b-0003-42de94f0e3f8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "close_default_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:security-group/sg-0b02231de3773c916",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0b02231de3773c916",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "258441923065",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053495c9309009022",
            "domain": "vpc",
            "id": "eipalloc-053495c9309009022",
            "network_border_group": "us-gov-west-1",
            "public_dns": "ec2-3-30-93-74.us-gov-west-1.compute.amazonaws.com",
            "public_ip": "3.30.93.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CustomerID": "01234567890"
            },
            "tags_all": {
              "CustomerID": "01234567890"
            },
            "vpc": true
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.data.aws_ssm_parameter.customer_id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fab182d3f986aad3",
            "domain": "vpc",
            "id": "eipalloc-0fab182d3f986aad3",
            "network_border_group": "us-gov-west-1",
            "public_dns": "ec2-15-205-116-124.us-gov-west-1.compute.amazonaws.com",
            "public_ip": "15.205.116.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CustomerID": "01234567890"
            },
            "tags_all": {
              "CustomerID": "01234567890"
            },
            "vpc": true
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.data.aws_ssm_parameter.customer_id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:internet-gateway/igw-03c2b87e43ee27052",
            "id": "igw-03c2b87e43ee27052",
            "owner_id": "258441923065",
            "tags": {
              "CustomerID": "01234567890",
              "Name": "InternetGW"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "InternetGW"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cmmc_nat_gw_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-053495c9309009022",
            "association_id": "eipassoc-055e81c5a12340dd7",
            "connectivity_type": "public",
            "id": "nat-07ead38926cda5acf",
            "network_interface_id": "eni-07b126823ff5c4c95",
            "private_ip": "10.0.1.38",
            "public_ip": "3.30.93.74",
            "subnet_id": "subnet-09879a88f154e36f3",
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CMMC NAT GW 1"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CMMC NAT GW 1"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cmmc_nat_gw_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fab182d3f986aad3",
            "association_id": "eipassoc-044231903f8b7b044",
            "connectivity_type": "public",
            "id": "nat-084bc401e30be0f71",
            "network_interface_id": "eni-08c093362e3099c04",
            "private_ip": "10.0.1.190",
            "public_ip": "15.205.116.124",
            "subnet_id": "subnet-0d4f058cc1b1332fa",
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CMMC NAT GW 2"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CMMC NAT GW 2"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cmmc_ingress_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-03529f5ecb69e6d52",
            "id": "rtb-03529f5ecb69e6d52",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0c02968311c4aef43",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.128/25",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-061d89fb4db2ad817",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IngressRT"
            },
            "tags_all": {
              "Name": "IngressRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "route"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_networkfirewall_firewall.inspection_vpc_anfw",
            "module.vpc.aws_networkfirewall_firewall_policy.anfw_policy",
            "module.vpc.aws_networkfirewall_rule_group.block_public_dns_resolvers",
            "module.vpc.aws_networkfirewall_rule_group.drop_icmp",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_partition.deploy_partition",
            "module.vpc.data.aws_region.deploy_region",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_dmz_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-0ccc3417347136df0",
            "id": "rtb-0ccc3417347136df0",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0c02968311c4aef43",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ1RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ1RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_networkfirewall_firewall.inspection_vpc_anfw",
            "module.vpc.aws_networkfirewall_firewall_policy.anfw_policy",
            "module.vpc.aws_networkfirewall_rule_group.block_public_dns_resolvers",
            "module.vpc.aws_networkfirewall_rule_group.drop_icmp",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_partition.deploy_partition",
            "module.vpc.data.aws_region.deploy_region",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_dmz_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-0dd90009bcd41edb1",
            "id": "rtb-0dd90009bcd41edb1",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-061d89fb4db2ad817",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ2RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ2RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_networkfirewall_firewall.inspection_vpc_anfw",
            "module.vpc.aws_networkfirewall_firewall_policy.anfw_policy",
            "module.vpc.aws_networkfirewall_rule_group.block_public_dns_resolvers",
            "module.vpc.aws_networkfirewall_rule_group.drop_icmp",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_partition.deploy_partition",
            "module.vpc.data.aws_region.deploy_region",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_mgmt_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-0f26d0df7e2e18463",
            "id": "rtb-0f26d0df7e2e18463",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ead38926cda5acf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt1RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt1RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_1",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_mgmt_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-05c458217fe927de5",
            "id": "rtb-05c458217fe927de5",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084bc401e30be0f71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt2RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt2RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_2",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_non_prod_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-03f67913dbceb1388",
            "id": "rtb-03f67913dbceb1388",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ead38926cda5acf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd1RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd1RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_1",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_non_prod_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-070f9009436d3249d",
            "id": "rtb-070f9009436d3249d",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084bc401e30be0f71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd2RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd2RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_2",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_prod_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-00abda601a1ec17d4",
            "id": "rtb-00abda601a1ec17d4",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ead38926cda5acf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerProd1RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerProd1RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_1",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "customer_prod_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-04da3f7ffd943e3f9",
            "id": "rtb-04da3f7ffd943e3f9",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084bc401e30be0f71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerProd2RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerProd2RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_2",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fw_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-006f8126814c27a2b",
            "id": "rtb-006f8126814c27a2b",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c2b87e43ee27052",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "Firewall1RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "Firewall1RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fw_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:route-table/rtb-01b6410e0723bf9cb",
            "id": "rtb-01b6410e0723bf9cb",
            "owner_id": "258441923065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c2b87e43ee27052",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CustomerID": "01234567890",
              "Name": "Firewall2RT"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "Firewall2RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_dmz_subnet_1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a7a491dee022462",
            "route_table_id": "rtb-0ccc3417347136df0",
            "subnet_id": "subnet-09879a88f154e36f3"
          },
          "dependencies": [
            "module.vpc.aws_networkfirewall_firewall.inspection_vpc_anfw",
            "module.vpc.aws_networkfirewall_firewall_policy.anfw_policy",
            "module.vpc.aws_networkfirewall_rule_group.block_public_dns_resolvers",
            "module.vpc.aws_networkfirewall_rule_group.drop_icmp",
            "module.vpc.aws_route_table.customer_dmz_1_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_partition.deploy_partition",
            "module.vpc.data.aws_region.deploy_region",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_dmz_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eb74c48a96b67ea",
            "route_table_id": "rtb-0dd90009bcd41edb1",
            "subnet_id": "subnet-0d4f058cc1b1332fa"
          },
          "dependencies": [
            "module.vpc.aws_networkfirewall_firewall.inspection_vpc_anfw",
            "module.vpc.aws_networkfirewall_firewall_policy.anfw_policy",
            "module.vpc.aws_networkfirewall_rule_group.block_public_dns_resolvers",
            "module.vpc.aws_networkfirewall_rule_group.drop_icmp",
            "module.vpc.aws_route_table.customer_dmz_2_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_partition.deploy_partition",
            "module.vpc.data.aws_region.deploy_region",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_mgmt_1_subnet_1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00745e45130cb46c6",
            "route_table_id": "rtb-0f26d0df7e2e18463",
            "subnet_id": "subnet-055a7d462f73d68c8"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_1",
            "module.vpc.aws_route_table.customer_mgmt_1_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_subnet.customer_subnet_mgmt_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_mgmt_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_mgmt_2_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb59e833aaa9b30",
            "route_table_id": "rtb-05c458217fe927de5",
            "subnet_id": "subnet-05ce34894b9085f05"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_2",
            "module.vpc.aws_route_table.customer_mgmt_2_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_subnet.customer_subnet_mgmt_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_mgmt_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_non_prod_1_subnet_1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f57d9d6051ff4f3",
            "route_table_id": "rtb-03f67913dbceb1388",
            "subnet_id": "subnet-0d8c21a3e6a711403"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_1",
            "module.vpc.aws_route_table.customer_non_prod_1_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_subnet.customer_subnet_nonprod_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_nonprod_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_non_prod_2_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc13ed252e54a37",
            "route_table_id": "rtb-070f9009436d3249d",
            "subnet_id": "subnet-0b879ab9255a6cdaf"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_2",
            "module.vpc.aws_route_table.customer_non_prod_2_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_subnet.customer_subnet_nonprod_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_nonprod_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_prod_1_subnet_1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374e5a26cd9459c5",
            "route_table_id": "rtb-00abda601a1ec17d4",
            "subnet_id": "subnet-081a399140763899a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_1",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_1",
            "module.vpc.aws_route_table.customer_prod_1_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_1",
            "module.vpc.aws_subnet.customer_subnet_prod_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_prod_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "customer_prod_2_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aa824455a99cc5d",
            "route_table_id": "rtb-04da3f7ffd943e3f9",
            "subnet_id": "subnet-0a6fc02da27a4245c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.cmmc_nat_gw_az_2",
            "module.vpc.aws_route_table.customer_prod_2_rt",
            "module.vpc.aws_subnet.customer_subnet_dmz_2",
            "module.vpc.aws_subnet.customer_subnet_prod_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_prod_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fw_1_subnet_1_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c0ec58df36a3056",
            "route_table_id": "rtb-006f8126814c27a2b",
            "subnet_id": "subnet-0bdf550b404738c75"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.fw_1_rt",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fw_2_subnet_2_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058e857538c2b3686",
            "route_table_id": "rtb-01b6410e0723bf9cb",
            "subnet_id": "subnet-0ba8a19ed6340cb53"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.fw_2_rt",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ingress_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-03c2b87e43ee27052",
            "id": "rtbassoc-0b7b1ac815fa28516",
            "route_table_id": "rtb-03529f5ecb69e6d52"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_networkfirewall_firewall.inspection_vpc_anfw",
            "module.vpc.aws_networkfirewall_firewall_policy.anfw_policy",
            "module.vpc.aws_networkfirewall_rule_group.block_public_dns_resolvers",
            "module.vpc.aws_networkfirewall_rule_group.drop_icmp",
            "module.vpc.aws_route_table.cmmc_ingress_route_table",
            "module.vpc.aws_subnet.firewall_subnet_1",
            "module.vpc.aws_subnet.firewall_subnet_2",
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_partition.deploy_partition",
            "module.vpc.data.aws_region.deploy_region",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_dmz_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-09879a88f154e36f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09879a88f154e36f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ1Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ1Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_dmz_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-0d4f058cc1b1332fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4f058cc1b1332fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ2Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerDMZ2Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_dmz_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_mgmt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-055a7d462f73d68c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055a7d462f73d68c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt1Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt1Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_mgmt_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_mgmt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-05ce34894b9085f05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce34894b9085f05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt2Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerMgmt2Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_mgmt_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_nonprod_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-0d8c21a3e6a711403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.3.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8c21a3e6a711403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd1Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd1Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_nonprod_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_nonprod_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-0b879ab9255a6cdaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.3.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b879ab9255a6cdaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd2Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerNonProd2Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_nonprod_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_prod_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-081a399140763899a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.4.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081a399140763899a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerProd1Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "CustomerProd1Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_prod_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "customer_subnet_prod_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-0a6fc02da27a4245c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.4.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6fc02da27a4245c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerProd2Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "CustomerProd2Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.customer_subnet_prod_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-0bdf550b404738c75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1a",
            "availability_zone_id": "usgw1-az1",
            "cidr_block": "10.0.5.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdf550b404738c75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "Firewall1Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1a",
              "CustomerID": "01234567890",
              "Name": "Firewall1Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az1",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_1_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:subnet/subnet-0ba8a19ed6340cb53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-gov-west-1b",
            "availability_zone_id": "usgw1-az2",
            "cidr_block": "10.0.5.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba8a19ed6340cb53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258441923065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "Firewall2Subnet",
              "Role": "CustomerSubnet"
            },
            "tags_all": {
              "AZ": "us-gov-west-1b",
              "CustomerID": "01234567890",
              "Name": "Firewall2Subnet",
              "Role": "CustomerSubnet"
            },
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "availability_zone"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "AZ",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_az2",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.firewall_subnet_2_cidr",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cmmc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:vpc/vpc-0a98c07cad3ff3987",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0810bf96a75c8e9ae",
            "default_route_table_id": "rtb-0129f74517778ffa6",
            "default_security_group_id": "sg-0b02231de3773c916",
            "dhcp_options_id": "dopt-0c06b465d59e7ebcf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a98c07cad3ff3987",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0129f74517778ffa6",
            "owner_id": "258441923065",
            "tags": {
              "CustomerID": "01234567890",
              "Name": "CustomerVPC"
            },
            "tags_all": {
              "CustomerID": "01234567890",
              "Name": "CustomerVPC"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "CustomerID",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:vpc-endpoint/vpce-03385cba313f438dd",
            "cidr_blocks": [
              "35.71.116.0/25",
              "52.94.9.0/24",
              "35.71.116.128/26"
            ],
            "id": "vpce-03385cba313f438dd",
            "owner_id": "258441923065",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-f7a6439e",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-gov-west-1.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr",
            "module.vpc.data.aws_vpc_endpoint_service.dynamodb"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:vpc-endpoint/vpce-03044b0a8a47895e6",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03044b0a8a47895e6",
            "ip_address_type": "ipv4",
            "owner_id": "258441923065",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b02231de3773c916"
            ],
            "service_name": "com.amazonaws.us-gov-west-1.ec2messages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr",
            "module.vpc.data.aws_vpc_endpoint_service.ec2messages"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:vpc-endpoint/vpce-0b056f15620a794ec",
            "cidr_blocks": [
              "108.175.48.0/22",
              "108.175.56.0/22"
            ],
            "id": "vpce-0b056f15620a794ec",
            "owner_id": "258441923065",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-65a5400c",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-gov-west-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr",
            "module.vpc.data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:vpc-endpoint/vpce-09437c95a7572381c",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09437c95a7572381c",
            "ip_address_type": "ipv4",
            "owner_id": "258441923065",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b02231de3773c916"
            ],
            "service_name": "com.amazonaws.us-gov-west-1.ssm",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr",
            "module.vpc.data.aws_vpc_endpoint_service.ssm"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-us-gov:ec2:us-gov-west-1:258441923065:vpc-endpoint/vpce-082e6c1e07c35419a",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-082e6c1e07c35419a",
            "ip_address_type": "ipv4",
            "owner_id": "258441923065",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b02231de3773c916"
            ],
            "service_name": "com.amazonaws.us-gov-west-1.ssmmessages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a98c07cad3ff3987"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cmmc_vpc",
            "module.vpc.data.aws_ssm_parameter.customer_id",
            "module.vpc.data.aws_ssm_parameter.vpc_cidr",
            "module.vpc.data.aws_vpc_endpoint_service.ssmmessages"
          ]
        }
      ]
    }
  ]
}